# retrofit-client-generator

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  generate.py  pyproject.toml  requirements.txt
retrofit_generator/: __init__.py  cli.py
retrofit_generator/templates/client/dto/: __ApiName__RequestDto.java  __ApiName__ResponseDto.java
retrofit_generator/templates/client/mapper/: __ApiName__RequestClientMapper.java  __ApiName__ResponseClientMapper.java
retrofit_generator/templates/client/rest/: __ApiName__Client.java
retrofit_generator/templates/client/rest/api/: __ApiName__Api.java
retrofit_generator/templates/client/rest/impl/: __ApiName__ClientImpl.java
retrofit_generator/templates/config_snippets/: EndpointsConfig.bean.java  RestClientConfig.bean.java  RestClientConfig.import.java  application.yml
retrofit_generator/templates/domain/external_request/: __ApiName__Request.java  __ApiName__Response.java
